Review Request 4963 -Fixed Jobs Page Expanded Status overlapping -Fixed PMML Model Stale Warning Dialog error -Fixed PMML Not showing correct icon on model list and other PMML issues -You can now upload Bulk Scoring File without errors

--- a/le-ui/projects/common/assets/sass/_tables.scss
+++ b/le-ui/projects/common/assets/sass/_tables.scss
@@ -125,7 +125,7 @@ table {
 
 .job-td-row {   
     border-bottom: $palladium solid 1px;
-	height: 45px;
+	min-height: 45px;
     &:nth-child(odd) {
         background: #f9f9f9;
     }
